feat : almost done......

--- a/Avixar.API/appsettings.json
+++ b/Avixar.API/appsettings.json
@@ -14,5 +14,10 @@
     "Issuer": "AvixarIdentityProvider",
     "Audience": "AvixarClients",
     "ExpirationMinutes": 60
-  }
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
+  },
+  
+
 }
