--- a/Avixar.Domain/Avixar.Domain.csproj
+++ b/Avixar.Domain/Avixar.Domain.csproj
@@ -5,12 +5,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Avixar.Data\Avixar.Data.csproj" />
     <ProjectReference Include="..\Avixar.Entity\Avixar.Entity.csproj" />
     <ProjectReference Include="..\Avixar.Infrastructure\Avixar.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
