--- a/Avixar.UI/appsettings.json
+++ b/Avixar.UI/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=avidevdb;Username=appuser;Password=Temp@123"
   },
- 
+
+  "Redis": {
+    "ConnectionString": "localhost:6379"
+  }
 }
