feat : Completed Functionality

--- a/Avixar.UI/appsettings.json
+++ b/Avixar.UI/appsettings.json
@@ -9,9 +9,44 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=avidevdb;Username=appuser;Password=Temp@123"
   },
-
   "Redis": {
     "ConnectionString": "127.0.0.1:6379,abortConnect=false"
   },
-
+  "CloudinarySettings": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": "-"
+    },
+    "Microsoft": {
+      "ClientId": "",
+      "ClientSecret": ""
+    },
+    "GitHub": {
+      "ClientId": "YOUR_GITHUB_CLIENT_ID",
+      "ClientSecret": "YOUR_GITHUB_CLIENT_SECRET"
+    }
+  },
+  "Security": {
+    "EncryptionKey": "",
+    "BlindIndexKey": ""
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SenderEmail": "",
+    "SenderPassword": "",
+    "SenderName": "Avixar Apps"
+  },
+  "OtpSettings": {
+    "ExpirySeconds": "300",
+    "MaxAttempts": "3"
+  },
+  "EmailVerification": {
+    "TokenExpiryHours": "24"
+  }
 }
