--- a/Avixar.Entity/Avixar.Entity.csproj
+++ b/Avixar.Entity/Avixar.Entity.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
 </Project>
